Overhauled the paper

--- a/tex/congestion.bib
+++ b/tex/congestion.bib
@@ -89,3 +89,36 @@
 	year = {2004},
 	pages = {383--386}
 }
+
+@article{vermiglio_increased_1986,
+	title = {Increased serum thyroglobulin concentrations and impaired thyrotropin response to thyrotropin-releasing hormone in euthyroid subjects with endemic goiter in {Sicily}: their relation to goiter size and nodularity},
+	volume = {9},
+	issn = {0391-4097},
+	shorttitle = {Increased serum thyroglobulin concentrations and impaired thyrotropin response to thyrotropin-releasing hormone in euthyroid subjects with endemic goiter in {Sicily}},
+	doi = {10.1007/BF03346949},
+	abstract = {Serum thyroglobulin (Tg), T4, T3, FT4, FT3, TSH concentrations and TSH response to iv TRH (delta TSH) were measured in 56 consecutive patients with (multi) nodular goiter from a severely iodine-deficient endemic goiter area in Northeastern Sicily and in 11 non goitrous euthyroid individuals living in the same area. Serum Tg concentrations were sharply increased in goitrous subjects (453 +/- 476 ng/ml) and related to thyroid size and the presence of nodules (chi 2 = 43.5, p less than 0.0005). Serum TSH levels measured in goitrous patients (2.1 +/- 0.9 microU/ml) were significantly lower than those measured in nongoitrous iodine deficient subjects (3.1 +/- 0.9 microU/ml, p less than 0.001) and decreased with increasing goiter size and nodularity (chi 2 = 27.3, p less than 0.05). A similar pattern was shown by the analysis of the delta TSH (chi 2 = 43.1, p less than 0.0005). These results suggest that at least a part of the largest and multinodular goiters become autonomously functioning with duration and growing in size. In 13 goitrous patients with absent or impaired response to TRH, a significant direct relation was apparent between log-Tg and goiter size and nodularity (r = 0.64) with an inverse relationship between serum FT3 and delta TSH (r = 0.73). A computed program analysis based on the combination of different independent variables (x) including age, thyroid size and nodularity, serum TSH, log-Tg and FT3, indicated the existence of a significant negative relationship between these variables and the TSH response to TRH (r = 0.75, p = 0).(ABSTRACT TRUNCATED AT 250 WORDS)},
+	language = {eng},
+	number = {5},
+	journal = {Journal of Endocrinological Investigation},
+	author = {Vermiglio, F. and Benvenga, S. and Melluso, R. and Catalfamo, S. and Princi, P. and Battiato, S. and Consolo, F. and Trimarchi, F.},
+	month = oct,
+	year = {1986},
+	pmid = {3098822},
+	keywords = {Adolescent, Adult, Aged, Female, Goiter, Endemic, Goiter, Nodular, Humans, Middle Aged, Sicily, Thyroglobulin, Thyrotropin, Thyrotropin-Releasing Hormone, Thyroxine, Triiodothyronine},
+	pages = {389--396}
+}
+
+@inproceedings{mao_neural_2017,
+	address = {New York, NY, USA},
+	series = {{SIGCOMM} '17},
+	title = {Neural {Adaptive} {Video} {Streaming} with {Pensieve}},
+	isbn = {978-1-4503-4653-5},
+	url = {http://doi.acm.org/10.1145/3098822.3098843},
+	doi = {10.1145/3098822.3098843},
+	booktitle = {Proceedings of the {Conference} of the {ACM} {Special} {Interest} {Group} on {Data} {Communication}},
+	publisher = {ACM},
+	author = {Mao, Hongzi and Netravali, Ravi and Alizadeh, Mohammad},
+	year = {2017},
+	keywords = {bitrate adaptation, reinforcement learning, video streaming},
+	pages = {197--210}
+}
