--- a/tex/paper.tex
+++ b/tex/paper.tex
@@ -6,6 +6,7 @@
 \usepackage{algpseudocode}
 \usepackage{algorithm}
 \usepackage[inline]{enumitem}
+\usepackage{varwidth}
 
 %\usepackage{todonotes}
 \usepackage{graphicx}
@@ -38,6 +39,10 @@
   \Statex\hskip\dimexpr#1\@tempdima\relax}
 \algdef{S}[WHILE]{WhileNoDo}[1]{\algorithmicwhile\ #1}%
 \makeatother
+
+\algnewcommand\True{\textbf{true}}
+\algnewcommand\False{\textbf{false}}
+\algnewcommand\Break{\textbf{break}}
 
 \newcommand{\algorithmautorefname}{Algorithm}
 
@@ -395,7 +400,7 @@ In this section, an example of the overall procedure is outlined.
 \section*{Appendix}
 
 \begin{algorithm}[H]
-\caption{Partial Action Learning -- pseudocode for each agent. It is possible that the agents share the global weights $\theta_{\text{a},\text{g}}$ and $\theta_{\text{v},\text{g}}$, which can be reasonable when learning off-line. Otherwise an individual copy of them is kept by each agent. All weights are initialized randomly in the beginning. LSTM cells are used in both the actor and the critic network.}
+\caption{Partial Action Learning -- pseudocode for each agent. It is possible that the agents share the global weights $\theta_{\text{g}}$, which is reasonable when learning off-line. Otherwise an individual copy of them is kept by each agent. By default, all weights are initialized randomly in the beginning but it is also possible to use a pre-trained neural network for initialization. As we use Gated Recurrent Units (GRUs) their output is stored in $h$ and fed into them at the next time step.}
 \label{alg:pal}
 \begin{algorithmic}[1]
 \Loop
@@ -403,28 +408,28 @@ In this section, an example of the overall procedure is outlined.
 	\State $l_\text{states} \gets  [] $
 	\State $l_\text{values} \gets  [] $
 	\State $l_\text{rewards} \gets  [] $
-	\State $l_\text{estimatedValues} \gets  [] $
+	\State $l_\text{values'} \gets  [] $
 	\State $l_\text{snapshots} \gets  [] $
 	\State $l_\text{hiddenStates} \gets  [] $
 	\State $t \gets 0$
 	\State $s_0 \gets \text{initialState}()$
-	\State $h_\text{a} \gets \text{initialHiddenState}()$
-	\State $h_\text{v} \gets \text{initialHiddenState}()$
-	\State $\theta_\text{a} \gets \theta_{\text{a},\text{g}}$
-	\State $\theta_\text{v} \gets \theta_{\text{v},\text{g}}$
+	\State $h \gets \text{zeros}()$
+	\State $\theta \gets \theta_{\text{g}}$
 	\Repeat
-		\State $l_\text{estimatedValues}.\text{append}(V(s_t; \theta_\text{v}))$
-		\If{$t \bmod t_\text{max} = 0$}
-			\State $\theta_\text{a} \gets \theta_{\text{a},\text{g}}$
-			\State $\theta_\text{v} \gets \theta_{\text{v},\text{g}}$
-			\State $l_\text{snapshots}.\text{append}((\theta_\text{a}, \theta_\text{v}))$
-			\State $l_\text{hiddenStates}.\text{append}((h_\text{a}, h_\text{v}))$
+		\State $l_\text{values'}.\text{append}(V(s_t; \theta))$
+		\If{\Call{updateWeights}{}}
+			\State $\theta_\text{a} \gets \theta_{\text{g}}$
+			\State $l_\text{snapshots}.\text{append}(\theta)$
+			\State $l_\text{hiddenStates}.\text{append}(h)$
 		\EndIf
 		\State $l_\text{states}.\text{append}(s_t)$
 		\State Sample $a_t$ from the 
 		\StateIndent[3] Actor Network's probability distribution
 		\State $l_\text{actions}.\text{append}(a_t)$
-		\State $l_\text{values}.\text{append}(V(s_t; \theta_\text{v}))$
+		\State $l_\text{values}.\text{append}(V(s_t; \theta_\text{v}))$ 
+		\Comment{Possibly different from the}
+		\StateIndent[3] value in $l_\text{values'}$ as the weights could have 
+		\StateIndent[3] been updated in the meantime.
 		\State $l_{\text{partialActions},t} \gets \text{partialActions}(a_t)$
 		\ForAll{partial actions $a_{{\text{p},i,t}}$ in $l_{\text{partialActions},t}$}
 			\State Take partial action $a_{{\text{p},i,t}}$
@@ -435,7 +440,8 @@ In this section, an example of the overall procedure is outlined.
 			\State $r_{t'} \gets \text{reward w.r.t all feedback }r_{\text{p},k,t'}$
 					\StateIndent[4] where $0 \leq k \leq\#(l_{\text{partialActions},t'})$
 			\State $l_\text{rewards}.\text{append}(r_{t'})$
-			\If{$\#\left(l_\text{rewards}\right) > t_\text{max}$ or the episode is over}
+			\If{\Call{enoughRewards}{} or the episode is over}
+%			\If{$\#\left(l_\text{rewards}\right) > t_\text{max}$ or the episode is over}
 				\State \Call{computeGradients}{}
 			\EndIf
 		\EndIf
@@ -453,29 +459,71 @@ In this section, an example of the overall procedure is outlined.
 \begin{algorithmic}[1]%
 %\algrestore{palalg}
 \Function{computeGradients}{}
-	\State $t_\text{end} = \min\left(t_\text{max}, \#\left( l_\text{rewards} \right)\right)$
-	\State $\theta_\text{backup} \gets \left(\theta_\text{a}, \theta_\text{v}\right)$
-	\State $h_\text{backup} \gets \left(h_\text{a}, h_\text{v}\right)$
-	\State $\theta_\text{a}, \theta_\text{v} \gets l_\text{snapshots}[0]$
-	\State $h_\text{a}, h_\text{v} \gets l_\text{hiddenStates}[0]$
-	\State $R_{i+1} \gets$ last element of $l_\text{estimatedValues}$%
-	\For{$i\gets t_\text{end}-1, 0$}
+	\State $t_\text{end} = \#\left( l_\text{rewards} \right)$
+	\State $\theta_\text{backup} \gets \theta$
+	\State $h_\text{backup} \gets h$
+	\State $\theta \gets l_\text{snapshots}[0]$
+	\State $h \gets l_\text{hiddenStates}[0]$
+	\State $R_{i+1} \gets$ last element of $l_\text{values'}$%
+	\For{$i\gets t_\text{end}-1..0$}
 		\State $R_i \gets \left(r_i + \gamma R_{i+1}\right)\left(1-\gamma\right)$
 		\State $a \gets l_\text{actions}[i]$
 		\State $s \gets l_\text{states}[i]$
 		\State $v \gets l_\text{values}[i]$
-		\State $d\theta_\text{a} \gets -\frac{\partial\log \left( \pi\left( a \given s; \theta_\text{a} \right)\right)\left(R_i - v\right)}{\partial\theta_a}$
-		\StateIndent[4] $-\frac{\partial\beta H\left( \pi\left( s; \theta_a \right)\right)}{\partial\theta_a}$
-		\State $d\theta_\text{v} \gets \frac{\partial\left(R_i - v\right)}{\partial\theta_v}$
-		\State $\theta_{\text{a},\text{g}} \gets \theta_{\text{a},\text{g}} + d\theta_\text{a}$
-		\State $\theta_{\text{v},\text{g}} \gets \theta_{\text{v},\text{g}} + d\theta_\text{v}$
+		\State $d\theta \gets -\frac{\partial\log \left( \pi\left( a \given s; \theta_\text{a} \right)\right)\left(R_i - v\right)}{\partial\theta}$
+		\StateIndent[4] $-\frac{\partial\beta H\left( \pi\left( s; \theta_a \right)\right)}{\partial\theta}$
+		\StateIndent[4] $+\frac{\partial\left(R_i - v\right)}{\partial\theta}$
+		\State $\theta_{\text{g}} \gets \theta_{\text{g}} + d\theta$
 	\EndFor
 	\State Remove first $t_\text{end}$ elements from
-	\StateIndent[2] $l_\text{actions}$, $l_\text{states}$, $l_\text{values}$, $l_\text{rewards}$, $l_\text{estimatedValues}$
+	\StateIndent[2] $l_\text{actions}$, $l_\text{states}$, $l_\text{values}$, $l_\text{rewards}$, $l_\text{values'}$
 	\State Remove the first element from $l_\text{snapshots}$
 	\State Remove the first element from $l_\text{hiddenStates}$
-	\State $\theta_\text{a}, \theta_\text{v} = \theta_\text{backup}$
-	\State $h_\text{a}, h_\text{v} = h_\text{backup}$
+	\State $\theta = \theta_\text{backup}$
+	\State $h = h_\text{backup}$
+\EndFunction
+\end{algorithmic}
+\end{algorithm}
+
+\begin{algorithm}[H]
+\caption{Procedure which determines when to synchronize the neural network weights from the global weights in case of congestion control. We assume that the window at time step $t$ is stored in a list $l_\text{windows}$ and that the number of bytes sent in each time step is stored in $l_\text{sent}$. Alternatively to this procedure one can simply synchronize the weights after each $t_\text{max}$ actions where $t_\text{max}$ is an arbitrarily chosen integer greater than 0.}
+\label{alg:update}
+\begin{algorithmic}[1]%
+%\algrestore{palalg}
+\Function{updateWeights}{}
+	\State $i \gets 0$
+	\While{$i < \#(l_\text{actions})$}
+		\State $w\gets \left\lfloor l_\text{windows}[i] + l_\text{actions}[i] \right\rfloor $
+		\For{$j\gets i..\#(l_\text{actions})-1$}
+			\State $w\gets \text{w} - l_\text{sent}[j]$
+			\If{$w\leq 0$}
+				\State $i \gets j$
+				\State \Break
+			\EndIf
+		\EndFor
+		\If{$i = \#(l_\text{windows})-1$}
+			\State \Return \True
+		\EndIf
+	\EndWhile
+	\State \Return \False
+\EndFunction
+\end{algorithmic}
+\end{algorithm}
+
+\begin{algorithm}[H]
+\caption{Procedure which determines when to start computing the gradients in case of congestion control. We assume that the window at time step $t$ is stored in a list $l_\text{windows}$ and that the number of bytes sent in each time step is stored in $l_\text{sent}$. Alternatively to this procedure one can simply compute the gradients when $t_\text{max}$ rewards have been received where $t_\text{max}$ is an arbitrarily chosen integer greater than 0.}
+\label{alg:enough}
+\begin{algorithmic}[1]%
+%\algrestore{palalg}
+\Function{enoughRewards}{}
+	\State w $\gets \left\lfloor l_\text{windows}[0] + l_\text{actions}[0] \right\rfloor$
+	\For{$i\gets 0..\#(l_\text{rewards})-1$}
+		\State w $\gets \text{w} - l_\text{sent}[i]$
+		\If{w $\leq 0$}
+			\State \Return \True
+		\EndIf
+	\EndFor
+	\State \Return \False
 \EndFunction
 \end{algorithmic}
 \end{algorithm}
