Tiny change in debug logging

--- a/tex/congestion.bib
+++ b/tex/congestion.bib
@@ -122,3 +122,15 @@
 	keywords = {bitrate adaptation, reinforcement learning, video streaming},
 	pages = {197--210}
 }
+
+@book{nahmias_production_2009,
+	address = {New York, NY},
+	edition = {6th ed},
+	series = {Operations and decision sciences},
+	title = {Production and operations analysis},
+	isbn = {978-0-07-337785-8},
+	publisher = {McGraw-Hill/Irwin},
+	author = {Nahmias, Steven},
+	year = {2009},
+	keywords = {Production management}
+}
